--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "marked": "^0.8.0",
+    "moment": "^2.24.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
